# fiatlux

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/common/: mat4.h  random.h  vec3.h
src/common/sampler/: sampler.cpp  sampler.h  sampler_2d.cpp  sampler_2d.h  sampler_hemisphere.cpp  sampler_hemisphere.h
src/gui/: gui.cpp  gui.h
src/image/: image.cpp  image.h  png.cpp  png.h  ppm.cpp  ppm.h
src/pathtracer/: intersection.h  pathtracer.cpp  pathtracer.h  ray.h
src/scene/: bsdf.cpp  bsdf.h  camera.cpp  camera.h  scene.cpp  scene.h  texture.cpp  texture.h  triangle.cpp  triangle.h
src/scene/accel/: bbox.cpp  bbox.h  bvh.cpp  bvh.h
tests/: CBbright.blend  CBbright.gltf  CBglossy.blend  CBglossy.gltf  CBoriginal.blend  CBoriginal.gltf  CBucb.blend  CBucb.gltf
